--- a/index.html
+++ b/index.html
@@ -21,11 +21,22 @@
 </head>
 
 <body class="bg-info-subtle text-secondary">
-  <h1 class="display-1 text-info">Bootstrap Classes</h1>
+  
+  <div class="container-fluid bg-light">
+    <h1 class="display-1 text-info text-center">Bootstrap Classes</h1>
+</div>
 
-  <p class="bg-dark text-light">We linked our HTML page to Bootstrap CSS code, which lets us borrow their styling rules. We just need to attach certain CLASS NAMES. </p>
+<div class="container">
+    <p class="text-info bg-dark bg-gradient lead">We linked our HTML page to Bootstrap's CSS code, so we can easily borrow their styling rules, just by attaching certain <span class="mark">CLASS NAMES</span> to any element we want to style. </p>
+</div>
+  <p class="small text-end">This paragraph follows the font COLOR rule from the body's class name list.</p>
 
-  <p>This paragraph follows the styling rule of the body, since it doesn't have its own specific class.</p>
+  <p>TYPOGRAPHY classes style text elements. We can format the font <span class="fs-1">size</span>, font <span class="fw-bold">weight</span>, and font <span class="fst-italic">style</span> of any section of text.</p>
+
+  <div class="container text-center">
+    <img class="img-fluid" src="https://thursdayboots.com/cdn/shop/files/2800x1080-Women-Combat-Java-013124-1_800x533_crop_right.jpg?v=1707339026">
+  </div>
+
 
 
 
