added more code

--- a/index.html
+++ b/index.html
@@ -37,6 +37,38 @@
     <img class="img-fluid" src="https://thursdayboots.com/cdn/shop/files/2800x1080-Women-Combat-Java-013124-1_800x533_crop_right.jpg?v=1707339026">
   </div>
 
+  <hr>
+
+  <div class="container-fluid"></div>
+<h2> Reuasable UI Components</h2>
+<p>Bootstrap provides code snippets that we can use in our own pages for common things like buttons, pop-up windows (modals), cards, slideshows (carousels)...</p>
+</div>
+
+<div class="container">
+<h3>BOOTSTRAP BUTTONS:</h3>
+<button class="btn btn-primary"> Primary color </button>
+<button class="btn btn-secondary"> Secondary color </button>
+<button class="btn btn-outline-dark"> Outline (any color) </button>
+<button class="btn btn-success btn-sm"> Smaller </button>
+<button class="btn btn-danger btn-lg"> Larger </button>
+</div>
+
+<div class="container">
+  <h3>BOOTSTRAP CARDS:</h3>
+  <p>For more complex components, we can copy-paste code sinippets from the <a href="https://getbootstrap.com">Bootatrap Website </a> and just add in our own content!</p>
+
+  <div class="card" >
+  <img src="https://cdn.britannica.com/95/124395-004-3B484C8B/hand-cards-trump-spades.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+
+</div>
+
 
 
 
